[tool.poetry]
name = "agnos-userspace"
version = "3.0.0"
description = ""
authors = ["Cameron Clough <cameronjclough@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
atomicwrites = "*"
cffi = "*"
crcmod = "*"
hexdump = "*"
libusb1 = "*"
numpy = "*"
psutil = "*"
pycapnp = "==1.1.0"
cryptography = "*"
python-dateutil = "*"
pyzmq = "*"
requests = "*"
setproctitle = "*"
six = "*"
smbus2 = "*"
sympy = "!=1.6.1"
tqdm = "*"
Cython = "*"
PyYAML = "*"
websocket_client = "*"
urllib3 = "*"
gunicorn = "*"
utm = "*"
json-rpc = "*"
Flask = "*"
nose = "*"
flake8 = "*"
pylint = "*"
pillow = "*"
scons = "*"
cysignals = "*"
pycryptodome = "*"
Jinja2 = "*"
PyJWT = "*"
pyserial = "*"
dbus-python = "*"
timezonefinder = "*"
sentry-sdk = "*"
markdown-it-py = "*"
# casadi = "3.5.5"

[tool.poetry.dev-dependencies]
ipython = "*"
azure-core = "*"
azure-common = "*"
azure-storage-blob = "~=2.1"
azure-storage-common = "~=2.1"
pycurl = "*"
git-pylint-commit-hook = "*"
tenacity = "*"
mock = "*"
dictdiffer = "*"
aenum = "*"
coverage = "*"
paramiko = "*"
lru-dict = "*"
pprofile = "*"
pyprof2calltree = "*"
pre-commit = "*"
mypy = "*"
parameterized = "*"
inputs = "*"
# casadi = "*"
future-fstrings = "*"  

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
